KCPQ_Project/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Logo_Name__c</fullName>
        <inlineHelpText>Enter Static Resource Name</inlineHelpText>
        <label>Logo Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Process_Id__c</fullName>
        <label>Quote Process Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Company_Logo_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select the checkbox if you want to show company logo only in the left side menu</inlineHelpText>
        <label>Show Company Logo Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sidebar_Color__c</fullName>
        <label>Sidebar Color</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>